--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: "202030301김동준"
-description: "대림대학교 2024년 3학년 2학기 프로젝트"
+name: daelim_project
+description: "202030301 김동준"
 publish_to: "none"
 version: 1.0.0+1
 
