--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   flex_color_scheme: ^7.3.1
   go_router: ^14.2.8
   http:
+  http_parser:
+  mime: ^2.0.0
+  lucide_icons: ^0.257.0
   shared_preferences: ^2.3.2
 
 dev_dependencies:
