--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: daelim_project
-description: "202030301 김동준"
+description: "대림대학교 2024년 3학년 2학기 김동준"
 publish_to: "none"
 version: 1.0.0+1
 
@@ -13,6 +13,7 @@ dependencies:
   # NOTE: Assets
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  lucide_icons_flutter: ^1.2.3
 
   # NOTE: Core
   easy_extension:
@@ -21,10 +22,9 @@ dependencies:
   file_picker: ^8.1.3
   flex_color_scheme: ^7.3.1
   go_router: ^14.2.8
-  http:
   http_parser:
+  http:
   mime: ^2.0.0
-  lucide_icons: ^0.257.0
   shared_preferences: ^2.3.2
 
 dev_dependencies:
