--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # NOTE: Assets
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
@@ -24,8 +23,9 @@ dependencies:
   go_router: ^14.6.0
   http_parser:
   http:
-  mime: ^2.0.0
+  mime: ^1.0.2
   shared_preferences: ^2.3.3
+  supabase_flutter: ^2.8.1
 
 dev_dependencies:
   flutter_test:
